// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeGallery snapshop - mount 1`] = `
<section
  className="home-gallery"
>
  <div
    className="gallery-new-shoes"
  >
    <h2>
      NEW SHOES
    </h2>
    <p>
      We just dropped new fall shoe styles, and they are all ON SALE! Shop new combat boots, booties, mules, sneakers & more!
    </p>
    <button>
      SHOP SHOES
    </button>
  </div>
  <div
    className="gallery-accessories"
  >
    <h2>
      Accessories
    </h2>
    <p>
      Take your fall outfit to the next level with new accessories! The perfect trendy handbag, dainty gold necklace, coin bracelet or statement earrings will upgrade any look.
    </p>
    <button>
      SHOP ACCESSORIES
    </button>
  </div>
  <img
    className="gallery1"
    src="./img/home/gallery/gallery-1.2.jpg"
  />
  <img
    className="gallery2"
    src="./img/home/gallery/gallery-2.1.jpg"
  />
  <img
    className="gallery3"
    src="./img/home/gallery/gallery-3.1.jpg"
  />
</section>
`;

exports[`HomeGallery snapshop - render 1`] = `
<section
  class="home-gallery"
>
  <div
    class="gallery-new-shoes"
  >
    <h2>
      NEW SHOES
    </h2>
    <p>
      We just dropped new fall shoe styles, and they are all ON SALE! Shop new combat boots, booties, mules, sneakers & more!
    </p>
    <button>
      SHOP SHOES
    </button>
  </div>
  <div
    class="gallery-accessories"
  >
    <h2>
      Accessories
    </h2>
    <p>
      Take your fall outfit to the next level with new accessories! The perfect trendy handbag, dainty gold necklace, coin bracelet or statement earrings will upgrade any look.
    </p>
    <button>
      SHOP ACCESSORIES
    </button>
  </div>
  <img
    class="gallery1"
    src="./img/home/gallery/gallery-1.2.jpg"
  />
  <img
    class="gallery2"
    src="./img/home/gallery/gallery-2.1.jpg"
  />
  <img
    class="gallery3"
    src="./img/home/gallery/gallery-3.1.jpg"
  />
</section>
`;

exports[`HomeGallery snapshop - shallow 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <HomeGallery />
</Router>
`;
